--- a/AIBot/pyproject.toml
+++ b/AIBot/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0",
     "email-validator>=2.2.0",
+    "pillow>=10.0.0",
+    "pypdf2>=3.0.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
