--- a/flutter_ai_bot/pubspec.yaml
+++ b/flutter_ai_bot/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   file_picker: ^8.0.0+1
   flutter_secure_storage: ^9.0.0
   image_picker_web: ^4.0.0
+  cross_file: ^0.3.3
 
 dev_dependencies:
   flutter_test:
