--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -71,10 +71,11 @@ jobs:
       
     - name: Create Artifact Registry repository (if not exists)
       run: |
+        gcloud artifacts repositories describe $SERVICE_NAME --location=$REGION || \
         gcloud artifacts repositories create $SERVICE_NAME \
           --repository-format=docker \
           --location=$REGION \
-          --description="Docker repository for $SERVICE_NAME" || true
+          --description="Docker repository for $SERVICE_NAME"
       
     - name: Build Docker image
       working-directory: ./AIBot
