--- a/AIBot/.env.example
+++ b/AIBot/.env.example
@@ -6,7 +6,7 @@ API_V1_STR="/api/v1"
 # Database Settings
 SQLALCHEMY_DATABASE_URI="sqlite:///./app.db"
 
-# Security Settings
+# Security Settings 1
 SECRET_KEY="your_super_secret_key_here_make_it_long_and_secure_at_least_32_characters"
 ACCESS_TOKEN_EXPIRE_MINUTES=1440 # 1 day
 ALGORITHM="HS256"
