--- a/flutter_ai_bot/pubspec.yaml
+++ b/flutter_ai_bot/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   image_picker_web: ^4.0.0
   cross_file: ^0.3.3
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
