--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -93,13 +93,14 @@ jobs:
           --region $REGION \
           --allow-unauthenticated \
           --port=8080 \
-          --set-env-vars="API_V1_STR=/api/v1,AI_PROVIDER=gemini,TENANT_DATABASE_PATH=./tenant_databases/" \
+          --set-env-vars="API_V1_STR=/api/v1,AI_PROVIDER=gemini,TENANT_DATABASE_PATH=./tenant_databases/,ENVIRONMENT=production" \
           --update-secrets="SECRET_KEY=SECRET_KEY:latest,GEMINI_API_KEY=GEMINI_API_KEY:latest,GROQ_API_KEY=GROQ_API_KEY:latest" \
           --memory=1Gi \
           --cpu=1 \
           --min-instances=0 \
           --max-instances=10 \
-          --timeout=300
+          --timeout=900 \
+          --startup-cpu-boost
           
     - name: Get service URL
       run: |
@@ -107,9 +108,17 @@ jobs:
         echo "Service deployed at: $SERVICE_URL"
         echo "SERVICE_URL=$SERVICE_URL" >> $GITHUB_ENV
         
+    - name: Check deployment logs
+      if: failure()
+      run: |
+        echo "Checking Cloud Run logs for debugging..."
+        gcloud logging read "resource.type=cloud_run_revision AND resource.labels.service_name=$SERVICE_NAME" --limit=50 --format="table(timestamp,textPayload)" || echo "Could not fetch logs"
+        
     - name: Test deployment
       run: |
-        curl -f $SERVICE_URL/api/v1/health || echo "Health check endpoint not available"
+        echo "Testing health endpoint..."
+        sleep 30  # Wait for service to fully start
+        curl -f $SERVICE_URL/health || curl -f $SERVICE_URL/api/v1/health || echo "Health check failed"
 
   docker-build-only:
     needs: test
