--- a/AIBot/Dockerfile
+++ b/AIBot/Dockerfile
@@ -32,4 +32,4 @@ ENV PORT=8080
 ENV PYTHONPATH=/app
 
 # Run the application
-CMD ["sh", "-c", "uv run uvicorn src.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
+CMD uv run uvicorn src.main:app --host 0.0.0.0 --port $PORT
