--- a/flutter_ai_bot/pubspec.yaml
+++ b/flutter_ai_bot/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker_web: ^4.0.0
   cross_file: ^0.3.3
   web_socket_channel: ^2.4.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
