--- a/AIBot/pyproject.toml
+++ b/AIBot/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "alembic>=1.13.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
-    "bcrypt<4.0",  # avoid incompatibility causing '__about__' AttributeError with passlib
+    "bcrypt<4.0", # avoid incompatibility causing '__about__' AttributeError with passlib
     "python-multipart>=0.0.6",
     "python-dotenv>=1.0.0",
     "langgraph>=0.2.0",
@@ -32,6 +32,7 @@ dependencies = [
     "email-validator>=2.2.0",
     "pillow>=10.0.0",
     "pypdf2>=3.0.0",
+    "langgraph-checkpoint-sqlite>=2.0.11",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
