--- a/.github/workflows/flutter-web-deploy.yml
+++ b/.github/workflows/flutter-web-deploy.yml
@@ -31,13 +31,30 @@ jobs:
         channel: 'stable'
         cache: true
         
+    - name: Cache Flutter dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.pub-cache
+          flutter_ai_bot/.dart_tool
+          flutter_ai_bot/build
+        key: ${{ runner.os }}-flutter-${{ hashFiles('flutter_ai_bot/pubspec.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-flutter-
+        
     - name: Get Flutter dependencies
       working-directory: ./flutter_ai_bot
       run: flutter pub get
       
+    - name: Clean Flutter build cache
+      working-directory: ./flutter_ai_bot
+      run: |
+        flutter clean
+        flutter pub get
+        
     - name: Build Flutter web
       working-directory: ./flutter_ai_bot
-      run: flutter build web --release
+      run: flutter build web --release --dart-define=FLUTTER_WEB_USE_SKIA=true
       
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
@@ -99,6 +116,15 @@ jobs:
                     root /usr/share/nginx/html;
                     expires 1y;
                     add_header Cache-Control "public, immutable";
+                    add_header ETag "";
+                }
+                
+                # Handle Flutter service worker and main.dart.js with no cache
+                location ~* \.(dart\.js|flutter_service_worker\.js)$ {
+                    root /usr/share/nginx/html;
+                    expires -1;
+                    add_header Cache-Control "no-cache, no-store, must-revalidate";
+                    add_header Pragma "no-cache";
                 }
             }
         }
@@ -160,13 +186,30 @@ jobs:
         channel: 'stable'
         cache: true
         
+    - name: Cache Flutter dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.pub-cache
+          flutter_ai_bot/.dart_tool
+          flutter_ai_bot/build
+        key: ${{ runner.os }}-flutter-${{ hashFiles('flutter_ai_bot/pubspec.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-flutter-
+        
     - name: Get Flutter dependencies
       working-directory: ./flutter_ai_bot
       run: flutter pub get
       
+    - name: Clean Flutter build cache
+      working-directory: ./flutter_ai_bot
+      run: |
+        flutter clean
+        flutter pub get
+        
     - name: Build Flutter web (test)
       working-directory: ./flutter_ai_bot
-      run: flutter build web --release
+      run: flutter build web --release --dart-define=FLUTTER_WEB_USE_SKIA=true
       
     - name: Upload web build artifacts
       uses: actions/upload-artifact@v4
