--- a/flutter_ai_bot/macos/Runner/Configs/AppInfo.xcconfig
+++ b/flutter_ai_bot/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = flutter_ai_bot
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.flutterAiBot
+PRODUCT_BUNDLE_IDENTIFIER = com.hippocampus.brain
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
