changing to OTP logic

--- a/AIBot/.env.example
+++ b/AIBot/.env.example
@@ -24,3 +24,12 @@ SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="your_email@gmail.com"
 SMTP_PASSWORD="your_app_password"
+
+# MessageCentral SMS/OTP Settings C-9FBBA6F36AA14EC
+MESSAGECENTRAL_BASE_URL="https://cpaas.messagecentral.com"
+MESSAGECENTRAL_CUSTOMER_ID="your_customer_id"
+MESSAGECENTRAL_AUTH_TOKEN="your_bearer_token_here"
+
+# OTP Settings
+OTP_EXPIRY_MINUTES=5
+OTP_RESEND_INTERVAL_SECONDS=30
