--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -93,8 +93,7 @@ jobs:
           --region $REGION \
           --allow-unauthenticated \
           --port=8080 \
-          --set-env-vars="API_V1_STR=/api/v1,AI_PROVIDER=gemini,TENANT_DATABASE_PATH=./tenant_databases/,ENVIRONMENT=production,MESSAGECENTRAL_BASE_URL=https://cpaas.messagecentral.com,MESSAGECENTRAL_CUSTOMER_ID=C-9FBBA6F36AA14EC,AI_CHAT_ENABLED=False" \
-          --update-secrets="SECRET_KEY=SECRET_KEY:latest,GEMINI_API_KEY=GEMINI_API_KEY:latest,GROQ_API_KEY=GROQ_API_KEY:latest,MESSAGECENTRAL_AUTH_TOKEN=MESSAGECENTRAL_AUTH_TOKEN:latest" \
+          --set-env-vars="API_V1_STR=/api/v1,AI_PROVIDER=gemini,TENANT_DATABASE_PATH=./tenant_databases/,ENVIRONMENT=production,MESSAGECENTRAL_BASE_URL=https://cpaas.messagecentral.com,MESSAGECENTRAL_CUSTOMER_ID=C-9FBBA6F36AA14EC,AI_CHAT_ENABLED=False,SECRET_KEY=${{ secrets.SECRET_KEY }},GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }},GROQ_API_KEY=${{ secrets.GROQ_API_KEY }},MESSAGECENTRAL_AUTH_TOKEN=${{ secrets.MESSAGECENTRAL_AUTH_TOKEN }}" \
           --memory=1Gi \
           --cpu=1 \
           --min-instances=0 \
