--- a/flutter_ai_bot/web/manifest.json
+++ b/flutter_ai_bot/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "flutter_ai_bot",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#023E8A",
+    "theme_color": "#023E8A",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
