--- a/flutter_ai_bot/pubspec.yaml
+++ b/flutter_ai_bot/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_launcher_icons: ^0.13.1
+  flutter_svg: ^2.0.10+1
   http: ^1.2.1
   image_picker: ^1.1.2
   file_picker: ^8.0.0+1
@@ -59,7 +61,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
