--- a/.github/workflows/android-beta-deploy.yml
+++ b/.github/workflows/android-beta-deploy.yml
@@ -138,7 +138,7 @@ jobs:
         
     - name: Create Google Play service account key
       run: |
-        echo "${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}" > service-account.json
+        printf '%s' "${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}" > service-account.json
         
     - name: Upload to Google Play Store (Open Testing)
       uses: r0adkll/upload-google-play@v1.1.3
