--- a/.github/workflows/android-beta-deploy.yml
+++ b/.github/workflows/android-beta-deploy.yml
@@ -148,7 +148,7 @@ jobs:
       uses: r0adkll/upload-google-play@v1.1.3
       with:
         serviceAccountJson: service-account.json
-        packageName: ${{ secrets.ANDROID_PACKAGE_NAME }}
+        packageName: com.hippocampus.brain
         releaseFiles: flutter_ai_bot/build/app/outputs/bundle/release/app-release.aab
         track: beta
         status: completed
