--- a/flutter_ai_bot/pubspec.yaml
+++ b/flutter_ai_bot/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cross_file: ^0.3.3
   web_socket_channel: ^2.4.0
   url_launcher: ^6.3.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
